<resources>
    <string name="app_name">VidBr</string>
    <string name="splash_subtitle">Discover, create, connect</string>
    <string name="pressione_novamente">Press again to exit</string>
    <string name="tab_seguindo">Following</string>
    <string name="tab_para_ti">For You</string>
    <string name="login_prompt">🔍 Log in to discover what your favorite creators are posting! 🎬✨</string>
    <string name="login_button_text">Log In</string>
    <string name="following_list_empty">Start following now and discover amazing videos! 🌟</string>
    <string name="no_videos_found">No videos found.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="check_connection">Check your connection and try again.</string>
    <string name="no_videos">There are no videos in your country.</string>
    <string name="publish_prompt">Click the + to start publishing</string>
    <string name="webview">WebView</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_video"></string>
    <string name="menu_chat">Chat</string>
    <string name="menu_profile">Profile</string>
    <string name="just_now">just now</string>
    <string name="seconds_ago">%d s ago</string>
    <string name="minutes_ago">%d min ago</string>
    <string name="hours_ago">%d h ago</string>
    <string name="days_ago">%d d ago</string>
    <string name="weeks_ago">%d wk ago</string>
    <string name="months_ago">%d mo ago</string>
    <string name="more_button_text">More</string>
    <string name="hide_button_text">Hide</string>
    <string name="name">What’s your name?</string>
    <string name="name_title">What do people call you?</string>
    <string name="hint_name">E.g. Daniel</string>
    <string name="register">Register</string>
    <string name="login_text">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Log In</string>
    <string name="entrar_com_google">Sign in with Google</string>
    <string name="no_account_text">I don’t have an account</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="terms_privacy_text">By continuing, you agree to our</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="page_not_found">Page not found</string>
    <string name="login_success">Login successful</string>
    <string name="email_invalid_error">Invalid email</string>
    <string name="error_min_password_length">Minimum 6 characters</string>
    <string name="create_account">Create account</string>
    <string name="birth">What’s your date of birth?</string>
    <string name="birth_text">The date of birth will not be displayed publicly.</string>
    <string name="birthday_placeholder">Date of Birth</string>
    <string name="next">Next</string>
    <string name="birthday_error_message">Please select your date of birth</string>
    <string name="age_error_message">You need to be at least 13 years old.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_length_validation">✔️ 8 characters (maximum of 20)</string>
    <string name="password_content_validation">✔️ 1 letter and 1 number</string>
    <string name="already_have_account">I already have an account</string>
    <string name="password_length_valid">✔️ 8 characters (maximum of 20)</string>
    <string name="password_length_invalid">❌ 8 characters (maximum of 20)</string>
    <string name="password_content_valid">✔️ 1 letter and 1 number</string>
    <string name="password_content_invalid">❌ 1 letter and 1 number</string>
    <string name="recover_title">Recover your account</string>
    <string name="instructions_text">Enter the email linked to your account, and we\’ll send you a link to reset your password.</string>
    <string name="recover_email_hint">Your email</string>
    <string name="recover_submit_button_text">Continue</string>
    <string name="email_error">Please enter a valid email</string>
    <string name="password_reset_success">Recovery link sent to %1$s</string>
    <string name="password_reset_error">Error sending recovery email</string>
    <string name="no_video_available">No videos available</string>
    <string name="email_label">Email: </string>
    <string name="not_logged_in">Email: Not logged in</string>
    <string name="birthday_label">Date of Birth: </string>
    <string name="region_label">Region: </string>
    <string name="loading_video_message">The video is loading. Please wait.</string>
    <string name="snackbar_message">To upload a video, you need to be logged in.</string>
    <string name="comments_header">Comments</string>
    <string name="no_comments_text">No comments yet</string>
    <string name="hint_adicionar_comentario">Add a comment...</string>
    <string name="text_copy">Copy</string>
    <string name="text_delete">Delete</string>
    <string name="options_title">Options</string>
    <string name="report_option">Report</string>
    <string name="save_option">Save</string>
    <string name="share_option">Share</string>
    <string name="share_video_text">Share this video!</string>
    <string name="share_button_text">Share via WhatsApp</string>
    <string name="copy_link_text">Copy Link</string>
    <string name="link_copied">Link copied</string>
    <string name="share_video">Share video</string>
    <string name="video_share_text">Hello! Check out this video at the link: </string>
    <string name="whatsapp_not_installed">WhatsApp is not installed.</string>
    <string name="report_question">Why are you reporting this video?</string>
    <string name="report_reason_pornographic">Pornographic or vulgar</string>
    <string name="report_reason_harmful_to_minors">Harmful to minors</string>
    <string name="report_reason_criminal_activities">Criminal activities and controlled goods</string>
    <string name="report_reason_spam">Spam</string>
    <string name="report_reason_hate_speech">Hate speech</string>
    <string name="report_reason_harassment">Harassment and bullying</string>
    <string name="report_reason_violent">Violent and explicit</string>
    <string name="report_reason_dangerous_orgs">Dangerous organizations and individuals</string>
    <string name="report_reason_suicide">Suicide and self-harm</string>
    <string name="report_reason_false_info">False information</string>
    <string name="report_reason_intellectual_property">Intellectual property violation</string>
    <string name="report_button">Report</string>
    <string name="select_reason_prompt">Select a reason</string>
    <string name="video_removed_due_to_reports">Video removed due to reports</string>
    <string name="video_count_label">videos</string>
    <string name="toolbar_title">Publish</string>
    <string name="hint_caption">Add a description...</string>
    <string name="char_count">0/2000</string>
    <string name="hashtags_button_text"># Hashtags</string>
    <string name="friends_button_text">\@ Friends</string>
    <string name="visibility_text">Visibility</string>
    <string name="submit_button_text">Publish</string>
    <string name="error_empty_caption">Write something...</string>
    <string name="video_exceeds_limit">The video exceeds the 30-second limit</string>
    <string name="visibility_label">Who can see:</string>
    <string name="delete_option">Delete</string>
    <string-array name="visibility_display_names">
        <item>Public</item>
        <item>Private</item>
    </string-array>
    <string name="rate_our_app">Rate our app</string>
    <string name="rate_message">If you enjoy using our app, could you rate us on the Play Store?</string>
    <string name="later_button_text">Maybe later</string>
    <string name="rate_now_button_text">Rate Now</string>
    <string name="neutral_emoji">😐</string>
    <string name="name_placeholder">Name</string>
    <string name="username_placeholder">Username</string>
    <string name="following_label">Following</string>
    <string name="followers_label">Followers</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="posts_label">Posts</string>
    <string name="logout_label">Log out</string>
    <string name="message_label">Message</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="biography_placeholder">This is the user\'s biography.</string>
    <string name="id_copiado">ID copied</string>
    <string name="share_profile_message">Check out %1$s\'s profile \n\n%2$s</string>
    <string name="share_profile_title">Share profile</string>
    <string name="clear_all_history">Clear all</string>
    <string name="view_more_history">View more history</string>
    <string name="search_hint">Search</string>
    <string name="video_tab">Videos</string>
    <string name="user_tab">Users</string>
    <string name="hashtag_tab">Hashtags</string>
    <string name="topics">Topics 🔥</string>
    <string name="category_music">Music 🎵</string>
    <string name="category_love">Love ❤️</string>
    <string name="category_meme">Meme 😂</string>
    <string name="category_indirect">Indirect 🤭</string>
    <string name="category_faith">Faith ✝️</string>
    <string name="category_sad">Sad 😢</string>
    <string name="category_humor">Humor 🤣</string>
    <string name="category_free_fire">Free Fire 🔥</string>
    <string name="category_funny">Funny 😆</string>
    <string name="category_motor">Motor 🚗</string>
    <string name="titulo_verificado">How to Get the Blue and Golden Verification</string>
    <string name="verificado_azul">Blue Verified</string>
    <string name="requisitos_azul">Requirements:</string>
    <string name="requisitos_azul_detalhes">• Number of Followers: You need at least 10,000 followers.\n\n• Participation in Specific Programs: Alternatively, you can get the blue verification by participating in specific programs or initiatives offered by the platform.</string>
    <string name="verificado_dourado">Golden Verified</string>
    <string name="requisitos_dourado">Requirements:</string>
    <string name="requisitos_dourado_detalhes">• Number of Followers: You need at least 100,000 followers.</string>
    <string name="dicas_importantes">Important Tips:</string>
    <string name="dicas_importantes_detalhes">• Authenticity: Make sure your information is complete and accurate.\n • Activity: Keep an active profile and engaged with your audience.\n• Compliance: Follow the platform\'s guidelines and policies to ensure a successful request.</string>
    <string name="instrucoes_email">To request verification, send your identification document to contato.vidbr@gmail.com</string>
    <string name="title_text">Account Deletion</string>
    <string name="message_text">Are you sure you want to delete your account?</string>
    <string name="confirm_button_text">Delete Account</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="recovery_warning_text">Account deletion cannot be recovered.</string>
    <string name="change_email_title">Change Email</string>
    <string name="change_email_explanation">Please enter a new email to update your account.</string>
    <string name="enter_new_email">Enter your new email</string>
    <string name="submit_email_button">Change Email</string>
    <string name="error_invalid_email">Please enter a valid email.</string>
    <string name="dialog_security_title">Security Confirmation</string>
    <string name="hint_enter_password">Enter your password</string>
    <string name="error_invalid_password">Incorrect password</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
</resources>