<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="16dp"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:letterSpacing="0.07"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#000000"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_margin="12dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_input"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email_hint"
            android:textColor="#000000"
            android:textColorHint="@color/gray"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_margin="12dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:hint="@string/password_hint"
                android:textColor="#000000"
                android:textColorHint="@color/gray"
                android:inputType="textPassword"
                android:padding="12dp"
                android:layout_alignParentStart="true"/>

            <ImageView
                android:id="@+id/show_password_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:padding="8dp"
                android:src="@drawable/eye"
                android:clickable="true"
                android:focusable="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/password_length_validation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_length_validation"
            android:textColor="#808080"
            android:textSize="12sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/password_content_validation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_content_validation"
            android:textColor="#808080"
            android:textSize="12sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="4dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/submit_btn"
            android:text="@string/next"
            android:backgroundTint="#38B6FF"
            android:textColor="#ffffff"
            android:layout_margin="12dp"
            android:padding="12dp"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/progress_bar"
            android:layout_margin="12dp"
            android:visibility="gone"
            android:padding="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textColor="#000000"
            android:layout_margin="12dp"
            android:id="@+id/go_to_login_btn"/>

        <TextView
            android:id="@+id/termsAndPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_privacy_text"
            android:textColor="#808080"
            android:textSize="12sp"
            android:gravity="center"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColorLink="#000000"/>

        <LinearLayout
            android:id="@+id/terms_privacy_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/terms_of_service_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_service"
                android:textColor="#38B6FF"
                android:textSize="12sp"
                android:layout_marginEnd="4dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/and_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textColor="#000000"
                android:textSize="12sp"
                android:layout_marginEnd="4dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/privacy_policy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="#38B6FF"
                android:textSize="12sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
